add new bib entries

--- a/source/_static/quant-econ.bib
+++ b/source/_static/quant-econ.bib
@@ -3,6 +3,23 @@ QuantEcon Bibliography File used in conjuction with sphinxcontrib-bibtex package
 Note: Extended Information (like abstracts, doi, url's etc.) can be found in quant-econ-extendedinfo.bib file in _static/
 ###
 
+@techreport{BCG_2018,
+  author      = {Bisin, Alberto and Gian Luca Clementi and Piero Gottardi},
+  title       = {Capital and Hedging Demand with Incomplete Markets},
+  institution = {NYU and EUI},
+  year        = {2018}
+}
+
+@article{Modigliani_Miller_1958,
+  author          = {Franco Modigliani and Merton H. Miller},
+  title           = {Corporation Finance and the Theory of Investment},
+  journal         = {American Economic Review},
+  volume          = {XLVIII},
+  number          = {3},
+  year            = {1958}
+  pages = {261-297}
+}
+
 @article{definetti,
   Author = {Bruno de Finetti},
   Date-Added = {2014-12-26 17:45:57 +0000},
