fix formatting for bibtex

--- a/source/_static/quant-econ.bib
+++ b/source/_static/quant-econ.bib
@@ -16,8 +16,8 @@ Note: Extended Information (like abstracts, doi, url's etc.) can be found in qua
   journal         = {American Economic Review},
   volume          = {XLVIII},
   number          = {3},
-  year            = {1958}
-  pages = {261-297}
+  year            = {1958},
+  pages           = {261-297}
 }
 
 @article{definetti,
