Tom's Sept 21 edits of von Neumann lecture

--- a/source/_static/quant-econ.bib
+++ b/source/_static/quant-econ.bib
@@ -348,7 +348,7 @@ Note: Extended Information (like abstracts, doi, url's etc.) can be found in qua
 @article{kemeny1956generalization,
   title={A generalization of the von Neumann model of an expanding economy},
   author={Kemeny, John G and Morgenstern, Oskar and Thompson, Gerald L},
-  journal={Econometrica, Journal of the Econometric Society},
+  journal={Econometrica},
   pages={115--135},
   year={1956},
   publisher={JSTOR}
@@ -357,7 +357,7 @@ Note: Extended Information (like abstracts, doi, url's etc.) can be found in qua
 @article{hamburger1967computation,
   title={Computation of expansion rates for the generalized von Neumann model of an expanding economy},
   author={Hamburger, Michael J and Thompson, Gerald L and Weil, Roman L},
-  journal={Econometrica, Journal of the Econometric Society},
+  journal={Econometrica},
   pages={542--547},
   year={1967},
   publisher={JSTOR}
